serv-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: scaling-nginx
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: scaling-nginx
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myapp
            port: 
              number: 80
